updated swagger but it needs more work still
